<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Explorer</string>
    <string name="dir_info">Folder Information</string>
    <string name="newd">New Directory</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="zipfolder">Zip Folder</string>
    <string name="pasteintofolder">Paste into Folder</string>
    <string name="filenotfound">File not found</string>
    <string name="sorrycouldntfindapdfviewver">Sorry couldnt find a PDF Viewer</string>
    <string name="sorrycouldntfindahtmlviewver">Sorry couldnt find a HTML Viewer</string>
    <string name="sorrycouldnt">Sorry couldnt</string>
    <string name="toopen">" to open "</string>
    <string name="extract">Extract</string>
    <string name="extractto">Extract to</string>
    <string name="cannotbeundoneareyousureyouwanttodelete">"This cannot be undone"</string>
    <string name="cancel">Cancel</string>
    <string name="newfolderwasnotcreated">New Folder was not created</string>
    <string name="multiselectisoffnow">Multiselect is off now</string>
    <string name="pressbackagaintoquit">Press back again to quit</string>
    <string name="copy">Copy</string>
    <string name="copying">Copying</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="moving">Moving</string>
    <string name="Numberoffolders">Number of Folders:</string>
    <string name="Numberoffiles">Number of Files:</string>
    <string name="LastModified">Last Modified:</string>
    <string name="used">Used:</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="multizip">Zip</string>
    <string name="calcinfo">Calculating Information</string>
    <string name="createnewfolder">Create new Folder</string>
    <string name="files">" Files"</string>
    <string name="folders">" Folders "</string>
    <string name="created">" created"</string>
    <string name="filecreated">File was created</string>
    <string name="options">Options</string>
    <string name="desc">desc</string>
    <string name="of">" of "</string>
    <string name="ok">OK</string>
    <string name="cantreadfolder">Can not read folder due to permissions</string>
    <string name="details">Details</string>
    <string name="folderwasrenamed">Folder was renamed</string>
    <string name="foundfiles">Found</string>
    <string name="multis">Multiselect</string>
    <string name="folderinfo">Folder Info</string>
    <string name="filewasrenamed">File was renamed</string>
    <string name="fname">Name:</string>
    <string name="fdirectory">Path:</string>
    <string name="newfile">New File</string>
    <string name="hiddenfiles">Hidden Files</string>
    <string name="showpreview">Thumbnails</string>
    <string name="multioff">Multiselect disabled</string>
    <string name="size">Used:</string>
    <string name="size1">Size</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="xdaforum">XDA Forum</string>
    <string name="itcouldntbefound">It couldnt be found</string>
    <string name="create">Create</string>
    <string name="searchtext">Search</string>
    <string name="sdcardnotfound">Couldnt find SD Card!</string>
    <string name="choosefiles">Select Files!</string>
    <string name="copysuccsess">successfully copy</string>
    <string name="movesuccsess">successfully move</string>
    <string name="copyfail">Copy failed!</string>
    <string name="AvaibleSize">Total Size:</string>
    <string name="openas">Open as</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="file">File</string>
    <string name="sort">Sort</string>
    <string name="error">Error</string>
    <string name="bookmark">Bookmarks</string>
    <string name="bookmarkadded">Bookmark added</string>
    <string name="bookmarkexist">Bookmark already exists!</string>
    <string name="createbookmark">Create Bookmark</string>
    <string name="uisettings">View Settings</string>
    <string name="advancedsettings">Advanced</string>
    <string name="viewmode">View Mode</string>
    <string name="simple">Simple</string>
    <string name="detailed">Detailed</string>
    <string name="createmsg">Set point before the text to create hidden folder.</string>
    <string name="appmanager">App Manager</string>
    <string name="launch">Launch</string>
    <string name="uninstallapp">Uninstall App</string>
    <string name="manage">Manage</string>
    <string name="backup">Backup</string>
    <string name="singlebackup">Single Backup</string>
    <string name="playstore">Playstore</string>
    <string name="version">"Version "</string>
    <string name="apps">" Apps"</string>
    <string name="selectall">Select All</string>
    <string name="unselectall">Unselect All</string>
    <string name="backupcomplete">Backup complete</string>
    <string name="noapps">No Apps selected</string>
    <string name="backedup">" backed up"</string>
    <string name="backuperror">Unable to  backup</string>
    <string name="loading">Loading..</string>
    <string name="deletesearchsuggestions">Delete Suggestions</string>
    <string name="suggestionscleared">Search suggestions cleared</string>
    <string name="searchprefs">Search Preferences</string>
    <string name="enablesearchsuggestions">Search Suggestions</string>
    <string name="defaultdir">Default Directory</string>
    <string name="shortcut">Create Shortcut</string>
    <string name="shortcutcreated">Shortcut created</string>
    <string name="deleteapps">Delete Apps</string>
    <string name="deleteappsmsg">Saved Apps will be deleted from SD Card!</string>
    <string name="appsdeleted">Apps removed from SD Card</string>
    <string name="freespace">Free Space:</string>
    <string name="zipping">Zipping</string>
    <string name="unzipping">Unzipping</string>
    <string name="untar">Unpack Tar file</string>
    <string name="deleting">Deleting</string>
    <string name="copiedtoclipboard">copied to Clipboard</string>
    <string name="paste">Paste</string>
    <string name="packing">Packing</string>
    <string name="permissions">Persmissions:</string>
</resources>