<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionmove"
        android:icon="@drawable/move"
        android:showAsAction="ifRoom"
        android:title="@string/move"/>
    <item
        android:id="@+id/actioncopy"
        android:icon="@drawable/copy"
        android:showAsAction="ifRoom"
        android:title="@string/copy"/>
    <item
        android:id="@+id/actiondelete"
        android:icon="@drawable/delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/actionshare"
        android:icon="@drawable/share"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/actionzip"
        android:icon="@drawable/zipfile"
        android:showAsAction="ifRoom"
        android:title="@string/multizip"/>
    <item
        android:id="@+id/actionall"
        android:showAsAction="never"
        android:title="@string/selectall"/>
    <item
        android:id="@+id/actionrmall"
        android:showAsAction="never"
        android:title="@string/unselectall"/>

</menu>