<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/paste"
        android:icon="@drawable/actionpaste"
        android:showAsAction="ifRoom"
        android:title="@string/paste"/>
    <item
        android:id="@+id/create"
        android:icon="@drawable/create"
        android:showAsAction="ifRoom"
        android:title="@string/create"/>
    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/bookmark"
        android:showAsAction="ifRoom"
        android:title="@string/bookmark"/>
    <item
        android:id="@+id/folderinfo"
        android:icon="@drawable/info"
        android:showAsAction="ifRoom"
        android:title="@string/dir_info"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>

</menu>