<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/fname"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ellipsize="end"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/fdirectory" />

        <TextView
            android:id="@+id/path_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:ellipsize="end"
            android:gravity="right|center_vertical"
            android:maxLines="1"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/Numberoffolders" />

        <TextView
            android:id="@+id/dirs_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/second_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/Numberoffiles" />

        <TextView
            android:id="@+id/files_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/third_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/LastModified" />

        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fourth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/used" />

        <TextView
            android:id="@+id/permission1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fifth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/freespace" />

        <TextView
            android:id="@+id/freespace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/six_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:maxLines="1"
            android:minWidth="120dp"
            android:padding="2dp"
            android:text="@string/AvaibleSize" />

        <TextView
            android:id="@+id/avaible_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right|center_vertical"
            android:textIsSelectable="false"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>