<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="1dp"
            android:text="@string/fname"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:textColor="?android:attr/textColorPrimaryDisableOnly"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="1dp"
            android:text="@string/fdirectory"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/path_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:paddingLeft="1dp"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:padding="1dp"
            android:text="@string/LastModified"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/time_stamp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:padding="1dp"
            android:text="@string/size"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/total_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:padding="1dp"
            android:text="@string/permissions"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/permission1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:padding="1dp"
            android:text="@string/md5"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/md5_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingLeft="1dp"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/quit"
        style="?android:attr/actionButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>